# auscult-ml

./: .gitignore  README.md  main.py  preprocess.py  pyproject.toml
data/processed/: heart_only.csv  lungs_only.csv  mixed_with_sliding_window.csv  mixed_without_sliding_window.csv
data/raw/: LS.csv
features/: mixed_with_sliding_window.csv  mixed_without_sliding_window.csv
scripts/: cli_helpers.py  compare_results.py  preprocess_data.py  train_all_models.py  train_decision_tree.py  train_logistic_regression.py  train_random_forest.py  train_svm.py
src/auscult_ml/: __init__.py  preprocess.py  results.py
src/auscult_ml/models/: __init__.py  common.py  decision_tree.py  logistic_regression.py  random_forest.py  svm.py
