[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auscult-ml"
version = "0.1.0"
description = "CS 422 Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.10",
    "natsort>=8.4",
    "numpy>=1.26",
    "pandas>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
